--- a/Notification-popup-animation/style.css
+++ b/Notification-popup-animation/style.css
@@ -1,3 +1,6 @@
+
+@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css";
+
 .notification {
     position: absolute;
     bottom: 50px;
