--- a/Notification-popup-animation/style.css
+++ b/Notification-popup-animation/style.css
@@ -1,4 +1,3 @@
-
 @import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css";
 
 .notification {
@@ -49,7 +48,7 @@
 }
 
 .text {
-    color: #16c9c9;
+    color: #539bdb;
     font-style: oblique;
     font-weight: bolder;
 }
