--- a/Finger-print-scanner/style.css
+++ b/Finger-print-scanner/style.css
@@ -22,6 +22,7 @@ body
     position: relative;
     width: 300px;
     height: 300px;
+    background: url(images/fingerPrint_01.png);
     background-size: 300px;
 }
 .scan h1 {
@@ -47,7 +48,7 @@ body
     left: 0;
     width: 100%;
     height: 100%;
-    
+    background: url(images/fingerPrint_02.png);
     background-size: 300px;
     animation: animate 4s ease-in-out infinite;
 }
