--- a/Toggle button animation/style.css
+++ b/Toggle button animation/style.css
@@ -13,3 +13,15 @@ body {
     min-height: 100vh;
     background: #2b2b2b;
 }
+
+label {
+    width: 80px;
+    height: 80px;
+    background: red;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
