--- a/Toggle button animation/style.css
+++ b/Toggle button animation/style.css
@@ -27,5 +27,21 @@ label {
 
 input {
     position: absolute;
+    color: #666;
+    filter:drop-shadow(0 0 2px rgba(0, 0, 0, .5))
+}
+
+.toggle {
+    position: absolute;
+    display: block;
+    width: 80px;
+    height: 80px;
+    background: #2b2b2b;
+    border-radius: 50%;
+    box-shadow: 
+        inset 0 8px 60px rgba(0, 0, 0, .1),
+        inset 0 8px 8px rgba(0, 0, 0, .1),
+        inset 0 -4px 4px rgba(0, 0, 0, .1);
+        z-index: -1;
 }
 
