--- a/Toggle button animation/style.css
+++ b/Toggle button animation/style.css
@@ -31,6 +31,12 @@ input {
     filter:drop-shadow(0 0 2px rgba(0, 0, 0, .5))
 }
 
+.moon {
+    font-size: 3em;
+    color: #666;
+    filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
+}
+
 .toggle {
     position: absolute;
     display: block;
