--- a/Toggle button animation/style.css
+++ b/Toggle button animation/style.css
@@ -31,10 +31,18 @@ input {
     filter:drop-shadow(0 0 2px rgba(0, 0, 0, .5))
 }
 
+.sun {
+    position: absolute;
+    font-size: 3em;
+    color: #666;
+    filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
+
+}
 .moon {
     font-size: 3em;
     color: #666;
     filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
+    transition: 1s ease;
 }
 input:checked~.moon {
     transform: rotate(360deg) scale(0);
