--- a/Toggle button animation/style.css
+++ b/Toggle button animation/style.css
@@ -38,6 +38,13 @@ input {
     filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
 
 }
+
+.sun {
+    position: absolute;
+    font-size: 3em;
+    color: #666;
+    filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
+}
 .moon {
     font-size: 3em;
     color: #666;
