--- a/Toggle button animation/style.css
+++ b/Toggle button animation/style.css
@@ -45,10 +45,11 @@ input {
     color: #666;
     filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
     transform: scale(0);
+    transition: 1s ease;
 }
 
 input:checked~.sun {
-    transform: rotate(360deg) scale(1);
+    transform:  scale(1) rotate(360deg);
 }
 .moon {
     font-size: 3em;
