--- a/Toggle button animation/style.css
+++ b/Toggle button animation/style.css
@@ -68,7 +68,6 @@ input:checked~.moon {
     display: block;
     width: 80px;
     height: 80px;
-    background: #2b2b2b;
     border-radius: 50%;
     box-shadow: 
         inset 0 8px 60px rgba(0, 0, 0, .1),
@@ -81,3 +80,16 @@ input:checked~.toggle {
     background: #f8f8f8;
 }
 
+.animateBg {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background: #f8f8f8;
+    z-index: -2;
+    clip-path: circle(0% at 50% 50%);
+    transition: 1.5s ease-out;
+}
+
+input:checked~.animateBg {
+    clip-path: circle(150% at 50% 50%);
+}
