--- a/Toggle button animation/style.css
+++ b/Toggle button animation/style.css
@@ -27,6 +27,7 @@ label {
 
 input {
     position: absolute;
+    opacity: 0;
     color: #666;
     filter:drop-shadow(0 0 2px rgba(0, 0, 0, .5))
 }
