--- a/JavaScript Toggle Button/Styles.css
+++ b/JavaScript Toggle Button/Styles.css
@@ -12,6 +12,11 @@ body {
     background: #2b2b2b;
     transition: 0.5s;
 }
+
+body.active {
+    background: #f8f8f8;
+}
+
 #toggle {
     position: relative;
     display: block;
@@ -39,4 +44,8 @@ body {
                 inset 0 4px 4px rgba(255, 255, 255, 0.2),
                 inset 0 -4px 4px rgba(255, 255, 255, 0.2);
     transition: 0.5s;
+}
+
+#toggle.active .indicator {
+    left: 160px;
 }
