--- a/JavaScript Toggle Button/Styles.css
+++ b/JavaScript Toggle Button/Styles.css
@@ -31,6 +31,12 @@ body.active {
                 inset 0 -4px 4px rgba(0, 0, 0, 0.1),;
 }
 
+#toggle.active {
+    background: #fff;
+    box-shadow: inset 0 2px 60px rgba(0, 0, 0, 0.1),
+                inset 0 2px 8px rgba(0, 0, 0, 0.1),
+                inset 0 -4px 8px rgba(0, 0, 0, 0.05),;
+}
 #toggle .indicator {
     position: absolute;
     top: 0;
@@ -48,4 +54,8 @@ body.active {
 
 #toggle.active .indicator {
     left: 160px;
+    background: linear-gradient(to bottom, #444, #222);
+    box-shadow: 0 8px 40px rgba(0, 0, 0, 0.5),
+                inset 0 4px 4px rgba(255, 255, 255, 0.2),
+                inset 0 -4px 4px rgba(255, 255, 255, 0.2);
 }
