--- a/JavaScript Toggle Button/Styles.css
+++ b/JavaScript Toggle Button/Styles.css
@@ -35,7 +35,7 @@ body.active {
     background: #fff;
     box-shadow: inset 0 2px 60px rgba(0, 0, 0, 0.1),
                 inset 0 2px 8px rgba(0, 0, 0, 0.1),
-                inset 0 -4px 8px rgba(0, 0, 0, 0.05),;
+                inset 0 -4px 4px rgba(0, 0, 0, 0.05),;
 }
 #toggle .indicator {
     position: absolute;
@@ -54,8 +54,8 @@ body.active {
 
 #toggle.active .indicator {
     left: 160px;
-    background: linear-gradient(to bottom, #444, #222);
-    box-shadow: 0 8px 40px rgba(0, 0, 0, 0.5),
-                inset 0 4px 4px rgba(255, 255, 255, 0.2),
-                inset 0 -4px 4px rgba(255, 255, 255, 0.2);
+    background: linear-gradient(to bottom, #eaeaea, #f9f9f9);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1),
+                inset 0 4px 4px rgba(255, 255, 255, 1),
+                inset 0 -4px 4px rgba(255, 255, 255, 1);
 }
